--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 200
+auto_detect_solc = false
+remappings=["@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/","@orochi-network/contracts/=lib/smart-contracts/contracts"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
